# Vtk_project

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CSV3DImporter.cpp  CSV3DImporter.h  ChangeClippingButtonCallback.cpp  ChangeClippingButtonCallback.h  ChangeClippingSliderCallback.cpp  ChangeClippingSliderCallback.h  ChangeVisionSliderCallback.cpp  ChangeVisionSliderCallback.h  Interactor.h  InteractorStyleProject.cpp  InteractorStyleProject.h  README.md  UpdateMeshGridCallback.cpp  UpdateMeshGridCallback.h  includes.h  settings.json  vtk_project.cpp
Actors/: ProportionsActor.cpp  ProportionsActor.h  ProportionsPieceActor.cpp  ProportionsPieceActor.h
Callbacks/: ChangeClippingButtonCallback.cpp  ChangeClippingButtonCallback.h  ChangeClippingPlaneCallback.cpp  ChangeClippingPlaneCallback.h  ChangeClippingSliderCallback.h  ChangeVisionSliderCallback.h
Importers/: CSV3DImporter.cpp  CSV3DImporter.h
Interactors/: Interactor.cpp  Interactor.h  InteractorStyleProject.h
